<resources>
    <string name="app_name">SHORTER</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">SCAN</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_historique">Historique</string>
    <string name="title_Recherche">Recherche</string>
    <string name="title_Recos">Recos</string>
    <string name="title_Scan">Scan</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >3 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_mode">Settings</string>
    <string name="title_info">Information</string>
    <string name="title_Avis">Avis</string>

    <string name="loggout">LOG OUT</string>
    <string name="title_activity_informations">Informations</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="SwitchDark">Dark Mode</string>
    <string name="SwitchLand">Landscape</string>
    <string name="SwitchLang">English</string>
    <string name="title_Stat">Statistic</string>
    <string name="action_search">action</string>
    <string name="title_activity_maps">Localisation</string>
</resources>