<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/title_historique" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_baseline_qr_code_scanner_24"
        android:title="@string/title_Scan" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_baseline_swap_horizontal_circle_24"
        android:title="@string/title_Recos" />

    <item
        android:id="@+id/navigation_recherche"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_Recherche" />
    <item
        android:id="@+id/navigation_stat"
        android:icon="@drawable/ic_baseline_insights_24"
        android:title="@string/title_Stat" />

</menu>